Styleing history table

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -51,14 +51,14 @@
 
     <!--Profile page-->
     <main class="container-md">
-        <div id="profilepage">
+        <div id="profilepage" class="ms-4">
             <h2 id="phead">Min profil</h2>
 
             <label for="email" class="formhead">E-post</label>
             <input disabled class="form-control" type="email" id="email" name="Email" value="{{user_email}}">
             <button type="button" class="mt-3">Uppdatera</button>
 
-            <h4 class ="mt-5">Notifikationer</h4>
+            <h4 class="mt-5">Notifikationer</h4>
             <label for="postnummer" class="formhead">Postnummer</label>
             <input class="form-control" type="text" id="zipcode" name="Postnummer">
             <br>
@@ -69,16 +69,30 @@
             <button type="button" id="savebtn" class="mt-2">Spara</button>
 
             <h3 id="phead" class="mt-4">Mina inlägg</h3>
-            <ul class="profilefont">
+            <!--History of published posts-->
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Kriskategori</th>
+                        <th>Plats</th>
+                        <th>Datum</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {%for information in user_information%}
+                    {% if information[1] != None and information[2] != None and information[3] != None %}
+                    <tr>
+                        <td class="p-2">{{information[1]}}</td>
+                        <td class="p-2">{{information[2]}}</td>
+                        <td class="p-2">{{information[3]}}</td>
+                    </tr>
+                    {%endif%}
+                    {%endfor%}
+                </tbody>
+                <tfoot></tfoot>
+            </table>
 
-                {%for information in user_information%}
-                {% if information[1] != None and information[2] != None and information[3] != None %}
-                <li>{{information[1]}} - {{information[2]}} - {{information[3]}}</li>
-                {%endif%}
-                {%endfor%}
-            </ul>
-
-
+            <!--Buttons to delete account and log out-->
             <button type="button" onclick="openDeleteModal()" class="mt-4 deletebtn">Radera konto</button>
 
             <form action="/Logga_ut" method="GET">
