Meny vid mindre skärmar
Fixat så att Meny är i mitten samt att menyn inte syns när hemsidan inte är i mobil-läge.

--- a/templates/polisen_api.html
+++ b/templates/polisen_api.html
@@ -29,7 +29,8 @@
     <!--NavBar-->
     <nav class="navbar">
         <ul>
-            <li id="dropmenu">Meny<i class="fa fa-caret-down"></i>
+            <li id="dropmenu">
+                <div class="meny">Meny</div> <i class="fa fa-caret-down"></i>
                 <ul class="dropdown-content">
                     <li><a href="/">Hem</a></li>
                     <li><a href="/Krishantering">Krishantering</a></li>
