--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -555,6 +555,13 @@ hr {
     border-radius: 5px;
 }
 
+.meny{
+    display: none;
+}
+
+.fa-caret-down{
+    display: none !important;
+}
 
 /* Styling for screens with a maximum width of 576px */
 @media screen and (max-width: 576px) {
@@ -562,11 +569,20 @@ hr {
         width: 50vw;
     }
 
-    .fa {
+    .fa-caret-down {
         font-size: 24px;
         color: #ffffff;
-        display: inline-block;
-        padding-left: 5px;
+        display: inline-block !important;
+        position: relative;
+        bottom: 22px;
+        left: 11px;
+    }
+
+    .meny{
+        color: white;
+        display: block;
+        position: relative;
+        right: 20px
     }
 
     #dropmenu {
@@ -582,6 +598,7 @@ hr {
     .dropdown-content {
         display: none;
         position: relative;
+        right: 27px;
     }
 
     .navbar a {
@@ -605,10 +622,25 @@ hr {
         width: 30vw;
     }
 
+    .fa-caret-down {
+        font-size: 24px;
+        color: #ffffff;
+        display: inline-block !important;
+        position: relative;
+        bottom: 22px;
+        left: 9px;
+    }
+
     .fa {
         font-size: 24px;
         color: #ffffff;
         padding-left: 5px;
+    }
+    .meny{
+        color: white;
+        display: block;
+        position: relative;
+        right: 20px
     }
 
     #dropmenu {
@@ -624,6 +656,7 @@ hr {
     .dropdown-content {
         display: none;
         position: relative;
+        right: 27px;
     }
 
     .navbar a {
