--- a/templates/contact.html
+++ b/templates/contact.html
@@ -25,28 +25,29 @@
   </div>
   <p id="slogan">Ditt bidrag, vår säkerhet</p>
 
-    <!--NavBar-->
-    <nav class="navbar">
-      <ul>
-          <li id="dropmenu">Meny<i class="fa fa-caret-down"></i>
-              <ul class="dropdown-content">
-                  <li><a href="/">Hem</a></li>
-                  <li><a href="/Krishantering">Krishantering</a></li>
-                  <li><a href="/Kontakt">Kontakta oss</a></li>
+  <!--NavBar-->
+  <nav class="navbar">
+    <ul>
+        <li id="dropmenu">
+            <div class="meny">Meny</div> <i class="fa fa-caret-down"></i>
+            <ul class="dropdown-content">
+                <li><a href="/">Hem</a></li>
+                <li><a href="/Krishantering">Krishantering</a></li>
+                <li><a href="/Kontakt">Kontakta oss</a></li>
 
-                  <!--Inloggad användare-->
-                  {% if is_logged_in != None %}
-                  <li><a href="/Ny">Publicera inlägg</a></li>
-                  <li><a href="/Profil" id="profilebtn">Min profil</a></li>
+                <!--Inloggad användare-->
+                {% if is_logged_in != None %}
+                <li><a href="/Ny">Publicera inlägg</a></li>
+                <li><a href="/Profil" id="profilebtn">Min profil</a></li>
 
-                  <!--Inte inloggad användare-->
-                  {% else %}
-                  <li><a href="/Logga_in" id="loginbtn">Logga in</a></li>
-                  <li><a href="/Registrering" id="regbtn">Gå med</a></li>
-                  {% endif %}
-              </ul>
-          </li>
-      </ul>
+                <!--Inte inloggad användare-->
+                {% else %}
+                <li><a href="/Logga_in" id="loginbtn">Logga in</a></li>
+                <li><a href="/Registrering" id="regbtn">Gå med</a></li>
+                {% endif %}
+            </ul>
+        </li>
+    </ul>
   </nav>
 
 
