--- a/templates/login.html
+++ b/templates/login.html
@@ -27,10 +27,11 @@
     </div>
     <p id="slogan">Ditt bidrag, vår säkerhet</p>
 
-    <!--NavBar-->
-    <nav class="navbar">
+     <!--NavBar-->
+     <nav class="navbar">
         <ul>
-            <li id="dropmenu">Meny<i class="fa fa-caret-down"></i>
+            <li id="dropmenu">
+                <div class="meny">Meny</div> <i class="fa fa-caret-down"></i>
                 <ul class="dropdown-content">
                     <li><a href="/">Hem</a></li>
                     <li><a href="/Krishantering">Krishantering</a></li>
