--- a/templates/profile.html
+++ b/templates/profile.html
@@ -28,7 +28,8 @@
     <!--NavBar-->
     <nav class="navbar">
         <ul>
-            <li id="dropmenu">Meny<i class="fa fa-caret-down"></i>
+            <li id="dropmenu">
+                <div class="meny">Meny</div> <i class="fa fa-caret-down"></i>
                 <ul class="dropdown-content">
                     <li><a href="/">Hem</a></li>
                     <li><a href="/Krishantering">Krishantering</a></li>
@@ -48,7 +49,7 @@
             </li>
         </ul>
     </nav>
-
+    
     <!--Profile page-->
     <main class="container-md">
         <div id="profilepage" class="ms-4">
