--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -276,7 +276,7 @@ nav ul li #dropmenu {
 /* Login page styling ends here */
 
 
-/* Registration page styling */
+/* Registration page styling 
 .leftside {
     justify-content: left;
     float: left;
@@ -298,6 +298,7 @@ nav ul li #dropmenu {
     float: right;
     width: 50%;
 }
+*/
 /* Registration page styling ends here*/
 
 
