--- a/templates/register.html
+++ b/templates/register.html
@@ -45,14 +45,16 @@
     <!--Wrapper-->
     <main class="container-md">
         <div class="row">
-            <div class="col-12 col-md-6">
-                <h3 class="mt-4 text-center">Registrera dig här!</h3>
-                <p class="text-center">Som registrerad användare kan du:</p>
-                <ul>
-                    <li>Publicera inlägg</li>
-                    <li>Bekräfta andra användares inlägg</li>
-                    <li>Få mejlnotiser vid krissituation i ditt område</li>
-                </ul>
+            <div class="col-12 col-md-6 d-md-flex justify-content-md-center">
+                <div>
+                    <h2 class="mt-4 text-md-center">Registrera dig här!</h2>
+                    <h5 class="mt-3 mt-md-4 text-md-center">Som registrerad användare kan du</h5>
+                    <ul>
+                        <li>Publicera inlägg</li>
+                        <li>Bekräfta andra användares inlägg</li>
+                        <li>Få mejlnotiser vid krissituation i ditt område</li>
+                    </ul>
+                </div>
             </div>
 
             <!--Alert when registration succeed-->
@@ -103,17 +105,11 @@
                             för att förbättra din användarupplevelse.
                         </small>
                     </p> <!--Genererat av AI-->
-
-
-
-
+                </form>
+                {% endif %}
             </div>
-            </form>
-            {% endif %}
+        </div>
     </main>
-    </div>
-    </div>
-
 
     <!--Footer-->
     <footer>
