--- a/templates/register.html
+++ b/templates/register.html
@@ -45,7 +45,7 @@
     <!--Wrapper-->
     <main class="container-md">
         <div class="row">
-            <div class="col-12 col-md-6 d-md-flex justify-content-md-center">
+            <div class="col-12 col-md-6 d-md-flex justify-content-md-center mb-5">
                 <div>
                     <h2 class="mt-4 text-md-center">Registrera dig här!</h2>
                     <h5 class="mt-3 mt-md-4 text-md-center">Som registrerad användare kan du</h5>
@@ -59,7 +59,7 @@
 
             <!--Alert when registration succeed-->
             {%if created == True: %}
-            <div class="col-12 col-md-6 alert alert-success alert-dismissible fade show" role="alert">
+            <div class="my-md-auto ms-4 mb-5 mt-3 col-9 col-md-4 alert alert-success alert-dismissible fade show" role="alert">
                 <h4 class="alert-heading">Sådärja!</h4>
                 <p>Ditt konto är nu skapat</p>
                 <a href="/Logga_in" class="btn btn-dark">Logga in</a>
