--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/stylesheet.css">
+    <script src="../static/script.js"></script>
     <!--Font Awesome pil-ikon för dropdown menu-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -49,27 +50,30 @@
             </li>
         </ul>
     </nav>
-    
+
     <!--Profile page-->
     <main class="container-md">
         <div id="profilepage" class="ms-4">
             <h2 id="phead">Min profil</h2>
+            <form action="/Uppdatera-email" method="POST">
+                <label for="email_field" class="formhead">E-post</label>
+                <input disabled class="form-control" type="email" id="email_field" name="Email" value="{{user_email}}">
+                <input type="button" onclick="undisable_emailfield()" value="Ändra" class="mt-3 btn btn-dark btn-sm"
+                    id="btn_toggle"></input>
+            </form>
 
-            <label for="email" class="formhead">E-post</label>
-            <input disabled class="form-control" type="email" id="email" name="Email" value="{{user_email}}">
-            <button type="button" class="mt-3">Uppdatera</button>
 
             <h4 class="mt-5">Notifikationer</h4>
             <label for="postnummer" class="formhead">Postnummer</label>
             <input class="form-control" type="text" id="zipcode" name="Postnummer">
             <br>
 
-            <h3 class="profilefont">Notifikationer</h3>
             <input type="checkbox" id="epost-notis" name="epost-notis" value="1">
             <label for="epost-notis">Jag vill få notiser på e-post när något händer i mitt område</label><br>
             <button type="button" id="savebtn" class="mt-2">Spara</button>
 
             <h3 id="phead" class="mt-4">Mina inlägg</h3>
+
             <!--History of published posts-->
             <table class="table table-striped">
                 <thead>
