--- a/templates/profile.html
+++ b/templates/profile.html
@@ -57,7 +57,15 @@
             <h2 id="phead">Min profil</h2>
             <form action="/Uppdatera-email" method="POST">
                 <label for="email_field" class="formhead">E-post</label>
-                <input disabled class="form-control" type="email" id="email_field" name="Email" value="{{user_email}}">
+                <input disabled class="form-control mb-0" type="email" id="email_field" name="Email"
+                    value="{{user_email}}">
+                {% if empty_field != "" %}
+                <p class="feedback_message_register mb-0"><small>{{empty_field}}</small></p>
+                {% elif no_new_email != "" %}
+                <p class="feedback_message_register mb-0"><small>{{no_new_email}}</small></p>
+                {% elif updated_email != "" %}
+                <p class="feedback_message_success mb-0"><small>{{updated_email}}</small></p>
+                {% endif %}
                 <input type="button" onclick="undisable_emailfield()" value="Ändra" class="mt-3 btn btn-dark btn-sm"
                     id="btn_toggle"></input>
             </form>
