--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -177,7 +177,7 @@ nav ul li #dropmenu {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #ffffff;
+    background-color: #6188C2;
 }
 
 .container-lg {
