--- a/templates/publish_post.html
+++ b/templates/publish_post.html
@@ -70,7 +70,7 @@
                         <label for="category" class="form-label ms-4 mt-3 h4">Kriskategori<span
                                 class="text-danger">*</span>
                         </label>
-                        <select class="form-control ms-4" name="category" required id="category" value={{category}}>
+                        <select class="form-control ms-4" name="category" id="category" value={{category}}>
                             <option hidden value="">Välj...</option>
                             {% for category in categories %}
                             {% for i in category %}
