--- a/templates/publish_post.html
+++ b/templates/publish_post.html
@@ -70,7 +70,7 @@
                         <label for="category" class="form-label ms-4 mt-3 h4">Kriskategori<span
                                 class="text-danger">*</span>
                         </label>
-                        <select class="form-control ms-4" name="category" required id="category" value={{category}}>
+                        <select class="form-control ms-4" name="category" id="category" value={{category}}>
                             <option hidden value="">Välj...</option>
                             {% for category in categories %}
                             {% for i in category %}
@@ -86,7 +86,7 @@
                             <label for="city" class="form-label ms-4 mt-2 h4">
                                 Stad<span class="text-danger">*</span>
                             </label>
-                            <input class="form-control ms-4" list="cityOptions" id="city" name="city" required
+                            <input class="form-control ms-4" list="cityOptions" id="city" name="city"
                                 placeholder="Sök..." value={{city}}>
                             <datalist id="cityOptions">
                                 <option value="Malmö">
@@ -101,7 +101,7 @@
                                 Postnummer<span class="text-danger">*</span>
                             </label>
                             <input class="form-control ms-4" list="zipOptions" id="ZIP" name="ZIP" placeholder="Sök..."
-                                required value={{zip_code}}>
+                                value={{zip_code}}>
                             <datalist id="zipOptions">
                                 <option value="21110">
                                 <option value="21111">
@@ -112,7 +112,7 @@
                     </div>
 
                     <div class="form-check ms-4 mt-2">
-                        <input class="form-check-input" type="checkbox" value="" id="confirmation" required>
+                        <input class="form-check-input" type="checkbox" value="" id="confirmation">
                         <label class="form-check-label" for="confirmation">
                             Den information som jag har uppgett är sanningsenlig
                         </label>
