--- a/templates/publish_post.html
+++ b/templates/publish_post.html
@@ -174,6 +174,16 @@
         <script>
             document.addEventListener('DOMContentLoaded', function () {
                 document.querySelector('.form_publish_post').addEventListener('submit', function (e) {
+                    const category = document.getElementById('category').value;
+                    const city = document.getElementById('city').value;
+                    const zip = document.getElementById('ZIP').value;
+                    const confirmation = document.getElementById('confirmation').checked;
+        
+                    if (!category || !city || !zip || !confirmation) {
+                        alert('Vänligen fyll i alla obligatoriska fält.');
+                        return;
+                    }
+        
                     e.preventDefault();
                     // Visa popup-meddelande
                     alert('Ditt inlägg har publicerats!');
