--- a/templates/profile.html
+++ b/templates/profile.html
@@ -52,90 +52,92 @@
     </nav>
 
     <!--Profile page-->
-    <main class="container-md">
-        <div id="profilepage" class="ms-4">
-            <h2 id="phead">Min profil</h2>
-            <form action="/Uppdatera-email" method="POST">
-                <label for="email_field" class="formhead">E-post</label>
-                <input disabled class="form-control mb-0" type="email" id="email_field" name="Email"
-                    value="{{user_email}}">
-                {% if empty_field != "" %}
-                <p class="feedback_message_register mb-0"><small>{{empty_field}}</small></p>
-                {% elif no_new_email != "" %}
-                <p class="feedback_message_register mb-0"><small>{{no_new_email}}</small></p>
-                {% elif updated_email != "" %}
-                <p class="feedback_message_success mb-0"><small>{{updated_email}}</small></p>
-                {% endif %}
-                <input type="button" onclick="undisable_emailfield()" value="Ändra" class="mt-3 btn btn-dark btn-sm"
-                    id="btn_toggle"></input>
-            </form>
-
-
-            <h4 class="mt-5">Notifikationer</h4>
-            <label for="postnummer" class="formhead">Postnummer</label>
-            <input class="form-control" type="text" id="zipcode" name="Postnummer">
-            <br>
-
-            <input type="checkbox" id="epost-notis" name="epost-notis" value="1">
-            <label for="epost-notis">Jag vill få notiser på e-post när något händer i mitt område</label><br>
-            <button type="button" id="savebtn" class="mt-2">Spara</button>
-
-            <h3 id="phead" class="mt-4">Mina inlägg</h3>
-
-            <!--History of published posts-->
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>Kriskategori</th>
-                        <th>Plats</th>
-                        <th>Datum</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {%for information in user_information%}
-                    {% if information[1] != None and information[2] != None and information[3] != None %}
-                    <tr>
-                        <td class="p-2">{{information[1]}}</td>
-                        <td class="p-2">{{information[2]}}</td>
-                        <td class="p-2">{{information[3]}}</td>
-                    </tr>
-                    {%endif%}
-                    {%endfor%}
-                </tbody>
-                <tfoot></tfoot>
-            </table>
-
-            <!--Buttons to delete account and log out-->
-            <button type="button" onclick="openDeleteModal()" class="mt-4 deletebtn">Radera konto</button>
-
-            <form action="/Logga_ut" method="GET">
-                <input type="submit" class="logoutbtn" value="Logga ut">
-            </form>
-        </div>
-        <div id="deleteModal" class="modal">
-            <div class="modal-content">
-                <span class="close" onclick="closeDeleteModal()">&times;</span>
-                <p>Är du säker på att du vill radera ditt konto? Detta kan inte ångras.</p>
-                <form id="deleteForm" action="/index.html" method="POST">
-                    <input type="hidden" name="delete" value="true">
-                    <button type="submit" class="deletebtn">Ja, radera mitt konto</button>
-                    <button type="button" onclick="closeDeleteModal()" class="cancelbtn">Avbryt</button>
+    <div class="container-md">
+        <div class="row">
+            <!--Aside content-->
+            <aside class="col-12 col-md-5 p-4 general_light_blue">
+                <h2 id="phead" class="text-center">Min profil</h2>
+                <form action="/Uppdatera-email" method="POST">
+                    <label for="email_field" class="formhead">E-post</label>
+                    <input disabled class="form-control mb-0" type="email" id="email_field" name="Email"
+                        value="{{user_email}}">
+                    {% if empty_field != "" %}
+                    <p class="feedback_message_register mb-0"><small>{{empty_field}}</small></p>
+                    {% elif no_new_email != "" %}
+                    <p class="feedback_message_register mb-0"><small>{{no_new_email}}</small></p>
+                    {% elif updated_email != "" %}
+                    <p class="feedback_message_success mb-0"><small>{{updated_email}}</small></p>
+                    {% endif %}
+                    <input type="button" onclick="undisable_emailfield()" value="Ändra" class="mt-3 btn btn-dark btn-sm"
+                        id="btn_toggle"></input>
                 </form>
-            </div>
+                <h4 class="mt-5 text-center">Notifikationer</h4>
+                <label for="postnummer" class="formhead">Postnummer</label>
+                <input class="form-control" type="text" id="zipcode" name="Postnummer">
+                <br>
+
+                <input type="checkbox" id="epost-notis" name="epost-notis" value="1">
+                <label for="epost-notis">
+                    <small>Jag vill få notiser på e-post när något händer i mitt område</small>
+                </label><br>
+                <button type="button" id="savebtn" class="mt-2 btn-sm">Spara</button>
+                <br>
+                <br>
+                <form action="/Logga_ut" method="GET">
+                    <input type="submit" class="logoutbtn btn-sm" value="Logga ut">
+                </form>
+                <br>
+                <br>
+                <br>
+
+                <!--Buttons to delete account and log out-->
+                <button type="button" onclick="openDeleteModal()" class="mt-4 deletebtn btn-sm">Radera konto</button>
+                <!--Modal-->
+                <div id="deleteModal" class="modal">
+                    <div class="modal-content">
+                        <span class="close" onclick="closeDeleteModal()">&times;</span>
+                        <p>Är du säker på att du vill radera ditt konto? Detta kan inte ångras.</p>
+                        <form id="deleteForm" action="/index.html" method="POST">
+                            <input type="hidden" name="delete" value="true">
+                            <button type="submit" class="deletebtn">Ja, radera mitt konto</button>
+                            <button type="button" onclick="closeDeleteModal()" class="cancelbtn">Avbryt</button>
+                        </form>
+                    </div>
+                </div>
+
+            </aside>
+            <!--Main content-->
+            <main id="profilepage" class="col-12 col-md-7">
+                <h3 id="phead" class="mt-4 text-center">Mina inlägg</h3>
+
+                <!--History of published posts-->
+                <div class="p-5">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>Kriskategori</th>
+                                <th>Plats</th>
+                                <th>Datum</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {%for information in user_information%}
+                            {% if information[1] != None and information[2] != None and information[3] != None %}
+                            <tr>
+                                <td class="p-2">{{information[1]}}</td>
+                                <td class="p-2">{{information[2]}}</td>
+                                <td class="p-2">{{information[3]}}</td>
+                            </tr>
+                            {%endif%}
+                            {%endfor%}
+                        </tbody>
+                        <tfoot></tfoot>
+                    </table>
+                </div>
+            </main>
         </div>
+    </div>
 
-        <script>
-            function openDeleteModal() {
-                var modal = document.getElementById("deleteModal");
-                modal.style.display = "block";
-            }
-
-            function closeDeleteModal() {
-                var modal = document.getElementById("deleteModal");
-                modal.style.display = "none";
-            }
-        </script>
-    </main>
 
 
     <!--Footer-->
