--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -1,3 +1,10 @@
+/* Add this at the beginning of your CSS */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background-color: #ffffff;
     font-family: Arial, Helvetica, sans-serif;
