--- a/templates/contact.html
+++ b/templates/contact.html
@@ -39,7 +39,8 @@
                 {% if is_logged_in != None %}
                 <li><a href="/Ny">Publicera inlägg</a></li>
                 <li><a href="/Profil" id="profilebtn">Min profil</a></li>
-
+                <li><a href="/Logga_ut" id="logoutbtn" class="mt-4 mb-5"> Logga ut </a></li>
+                
                 <!--Inte inloggad användare-->
                 {% else %}
                 <li><a href="/Logga_in" id="loginbtn">Logga in</a></li>
@@ -48,7 +49,8 @@
             </ul>
         </li>
     </ul>
-  </nav>
+</nav>
+
 
 
   <div class="container-md">
