--- a/templates/polisen_api.html
+++ b/templates/polisen_api.html
@@ -26,7 +26,7 @@
     </div>
     <p id="slogan">Ditt bidrag, vår säkerhet</p>
 
-    <!--NavBar-->
+        <!--NavBar-->
     <nav class="navbar">
         <ul>
             <li id="dropmenu">
@@ -40,7 +40,8 @@
                     {% if is_logged_in != None %}
                     <li><a href="/Ny">Publicera inlägg</a></li>
                     <li><a href="/Profil" id="profilebtn">Min profil</a></li>
-
+                    <li><a href="/Logga_ut" id="logoutbtn" class="mt-4 mb-5"> Logga ut </a></li>
+                    
                     <!--Inte inloggad användare-->
                     {% else %}
                     <li><a href="/Logga_in" id="loginbtn">Logga in</a></li>
