--- a/templates/publish_post.html
+++ b/templates/publish_post.html
@@ -34,6 +34,8 @@
             {% if is_logged_in != None %}
             <li><a href="/Ny">Publicera inlägg</a></li>
             <li><a href="/Profil" id="profilebtn">Min profil</a></li>
+            <li><a href="/Logga_ut" id="logoutbtn" class="mt-4 mb-5"> Logga ut </a></li>
+
 
             <!--Inte inloggad användare-->
             {% else %}
