--- a/templates/profile.html
+++ b/templates/profile.html
@@ -132,13 +132,15 @@
                             </tr>
                         </thead>
                         <tbody>
-                            {%for information in user_information%}
+                            {% for information in user_information %}
                             {% if information[1] != None and information[2] != None and information[3] != None %}
                             <tr>
                                 <td class="p-2">{{information[1]}}</td>
                                 <td class="p-2">{{information[2]}}</td>
                                 <td class="p-2">{{information[3]}}</td>
                             </tr>
+                            {% else %}
+                            <p>Du har ännu inte publicerat något inlägg.</p>
                             {%endif%}
                             {%endfor%}
                         </tbody>
