--- a/templates/chrisis_tips.html
+++ b/templates/chrisis_tips.html
@@ -99,7 +99,7 @@
               Myndigheten verkar för en god folkhälsa och arbetar för att befolkningen ska ha ett skydd mot smittsamma
               sjukdomar och andra hälsohot.
               <span style="color: red;">Telefon till växeln: 010-205 20 00 </span><br>
-              <a href="https://www.folkhalsomyndigheten.se" class="mt-3 btn btn-dark">Läs mer</a>
+              <a href="https://www.folkhalsomyndigheten.se" target=”_blank” class="mt-3 btn btn-dark">Läs mer</a>
               <br>
               <img src="static/folkmy.png" class="mt-3 img-fluid" alt="Placeholder Image">
             </p>
