Bekräfta lösenord, popup samt validate

--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="sv">
 
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +13,6 @@
     <!--Font Awesome pil-ikon för dropdown menu-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-
 
 <body>
     <div class="logo-container">
@@ -34,7 +32,6 @@
                     <li><a href="/">Hem</a></li>
                     <li><a href="/Krishantering">Krishantering</a></li>
                     <li><a href="/Kontakt">Kontakta oss</a></li>
-
                     <!--Inte inloggad användare-->
                     <li><a href="/Logga_in" id="loginbtn">Logga in</a></li>
                     <li><a href="/Registrering" id="regbtn">Gå med</a></li>
@@ -43,11 +40,10 @@
         </ul>
     </nav>
 
-
     <!--Wrapper-->
     <main class="container-md">
         <div class="row">
-            <div class="col-12 col-md-6 d-md-flex justify-content-md-center mb-2 mb-md-5 ">
+            <div class="col-12 col-md-6 d-md-flex justify-content-md-center mb-2 mb-md-5">
                 <div>
                     <h2 class="mt-4 text-md-center">Registrera dig här!</h2>
                     <h5 class="mt-3 mt-md-4 text-md-center">Som registrerad användare kan du</h5>
@@ -78,10 +74,7 @@
             {%else: %}
             <div class="mt-4 col-12 col-md-6">
                 <form action="/Registrering" method="POST" class="pb-5" accept-charset="UTF-8">
-                    <label for="email" class="form-label mt-3 h6">
-                        Mejladress
-                    </label><br>
-
+                    <label for="email" class="form-label mt-3 h6">Mejladress</label>
                     <div class="input-group">
                         <span class="input-group-text">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -90,8 +83,7 @@
                                     d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z" />
                             </svg>
                         </span>
-                        <input class="form-control" type="email" id="email" name="email" placeholder="Din mejladress..."
-                            value={{email}}>
+                        <input class="form-control" type="email" id="email" name="email" placeholder="Din mejladress..." value="{{email}}">
                     </div>
                     <p class="feedback_message_register"><small>{{no_email_feedback}}</small></p>
 
@@ -104,9 +96,15 @@
                     <input class="form-control" type="password" id="pwd" name="pwd">
                     <p class="feedback_message_register"><small>{{no_pwd_feedback}}</small></p>
                     <p class="feedback_message_register"><small>{{pwd_feedback}}</small></p>
-                    <input class="mt-2" type="checkbox" onclick="togglePassword()"> Visa lösenord
-                    <br>
-                    <br>
+
+                    <label for="confirm_pwd" class="form-label mt-3 h6">Bekräfta Lösenord</label>
+                    <input class="form-control" type="password" id="confirm_pwd" name="confirm_pwd">
+                    <p class="feedback_message_register"><small>{{confirm_pwd_feedback}}</small></p>
+
+                    <div class="form-check mt-2">
+                        <input class="mt-2" type="checkbox" id="show_password" onclick="togglePassword()"> Visa lösenord
+                    </div>
+
                     <button type="submit" class="btn btn-dark mt-4 mb-4">Registrera mig</button>
                     <p>
                         <small> Genom att registrera dig bekräftar du att du har läst och accepterar våra
@@ -157,6 +155,7 @@
             </div>
             <hr>
             <p id="copy">© 2024 KrisKoll</p>
+        </div>
     </footer>
 
 
