--- a/templates/chrisis_tips.html
+++ b/templates/chrisis_tips.html
@@ -132,9 +132,11 @@
           </div>
         </div>
       </div>
-
-
+      </div>
+      </div>
       </main>
+
+
       <!--Footer-->
       <footer>
         <div class="container-fluid">
