JS - toggle both passwords

--- a/templates/register.html
+++ b/templates/register.html
@@ -92,12 +92,12 @@
                     <p class="feedback_message_register"><small>{{age_feedback}}</small></p>
 
                     <label for="pwd" class="form-label mt-3 h6">Lösenord</label>
-                    <input class="form-control" type="password" id="pwd" name="pwd">
+                    <input class="form-control" type="password" id="pwd1" name="pwd">
                     <p class="feedback_message_register"><small>{{no_pwd_feedback}}</small></p>
                     <p class="feedback_message_register"><small>{{pwd_feedback}}</small></p>
 
                     <label for="confirm_pwd" class="form-label mt-3 h6">Bekräfta Lösenord</label>
-                    <input class="form-control" type="password" id="confirm_pwd" name="confirm_pwd">
+                    <input class="form-control pwd_toggle" type="password" id="confirm_pwd" name="confirm_pwd">
                     <p class="feedback_message_register"><small>{{confirm_pwd_feedback}}</small></p>
 
                     <div class="form-check mt-2">
